[package]
name = "dothereum"
version = "0.3.0"
authors = ["Schoedon, Akinfiev, Pickle"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "dothereum"
path = "cli/bin/main.rs"

[workspace]
members = [
  "cli",
  "executor",
  "primitives",
  "rpc",
  "rpc-client",
  "runtime",
  "testing",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[dependencies]
babe = { package = "substrate-consensus-babe", git = 'https://github.com/paritytech/substrate.git' }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = 'https://github.com/paritytech/substrate.git' }
basic-authorship = { package = "substrate-basic-authorship", git = 'https://github.com/paritytech/substrate.git' }
codec = { package = "parity-scale-codec", version = "1.1.0" }
ctrlc = { version = "3.1.3", features = ["termination"] }
dothereum-cli = { path = "cli" }
dothereum-runtime = { path = "runtime" }
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
grandpa = { package = "substrate-finality-grandpa", git = 'https://github.com/paritytech/substrate.git' }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = 'https://github.com/paritytech/substrate.git' }
inherents = { package = "substrate-inherents", git = 'https://github.com/paritytech/substrate.git' }
log = "0.4.8"
network = { package = "substrate-network", git = 'https://github.com/paritytech/substrate.git' }
parking_lot = "0.10.0"
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git' }
sr-io = { git = 'https://github.com/paritytech/substrate.git' }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git' }
substrate-cli = { git = 'https://github.com/paritytech/substrate.git' }
substrate-client = { git = 'https://github.com/paritytech/substrate.git' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git' }
substrate-service = { git = 'https://github.com/paritytech/substrate.git' }
tokio = "0.2.1"
transaction-pool = { package = "sc-transaction-pool", git = 'https://github.com/paritytech/substrate.git' }
trie-root = "0.15.2"

[build-dependencies]
build-script-utils = { package = "substrate-build-script-utils", git = 'https://github.com/paritytech/substrate.git' }
vergen = "3.0.4"
