[package]
name = "dothereum"
version = "0.3.0"
authors = ["Schoedon, Akinfiev, Pickle"]
build = "build.rs"
edition = "2018"
default-run = "dothereum"

[[bin]]
name = "dothereum"
path = "cli/bin/main.rs"

[workspace]
members = [
  "cli",
  "executor",
  "primitives",
  "rpc",
  "runtime",
  "testing",
]

[profile.release]
panic = "unwind"

[dependencies]
ctrlc = { version = "3.1.3", features = ["termination"] }
dothereum-cli = { path = "cli" }
futures = "0.3.1"
substrate-cli = { git = 'https://github.com/paritytech/substrate.git' }

[build-dependencies]
vergen = "3.0.4"
