[package]
name = "dothereum"
version = "0.2.3"
authors = ["Schoedon, Akinfiev, Pickle"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "dothereum"
path = "src/main.rs"

[dependencies]
aura = { package = "sc-consensus-aura", git = 'https://github.com/paritytech/substrate.git' }
aura-primitives = { package = "sp-consensus-aura", git = 'https://github.com/paritytech/substrate.git' }
basic-authorship = { package = "sc-basic-authority", git = 'https://github.com/paritytech/substrate.git' }
codec = { package = "parity-scale-codec", version = "1.1.0" }
consensus-common = { package = "sp-consensus", git = 'https://github.com/paritytech/substrate.git' }
ctrlc = { version = "3.1.3", features = ["termination"] }
dothereum-runtime = { path = "runtime" }
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
grandpa = { package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git' }
grandpa-primitives = { package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git' }
inherents = { package = "sp-inherents", git = 'https://github.com/paritytech/substrate.git' }
log = "0.4.8"
network = { package = "sc-network", git = 'https://github.com/paritytech/substrate.git' }
parking_lot = "0.10.0"
primitives = { package = "sp-core", git = 'https://github.com/paritytech/substrate.git' }
rust-embed = "5.1.0"
sc-cli = { git = 'https://github.com/paritytech/substrate.git' }
sc-client = { git = 'https://github.com/paritytech/substrate.git' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git' }
sc-service = { git = 'https://github.com/paritytech/substrate.git' }
sp-io = { git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git' }
tokio = "0.1.22"
trie-root = "0.15.2"
txpool = { package = "sc-transaction-pool", git = 'https://github.com/paritytech/substrate.git' }
txpool-api = { package = "sp-transaction-pool-api", git = 'https://github.com/paritytech/substrate.git' }

[build-dependencies]
build-script-utils = { package = "substrate-build-script-utils", git = 'https://github.com/paritytech/substrate.git' }
vergen = "3.0.4"
