[package]
name = "dothereum-cli"
version = "0.3.0"
authors = ["Schoedon, Akinfiev, Pickle"]
description = "Dothereum node implementation in Rust."
build = "build.rs"
edition = "2018"
default-run = "dothereum"

[[bin]]
name = "dothereum"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.1.0" }
futures = { version = "0.3.1", features = ["compat"] }
futures01 = { package = "futures", version = "0.1.29" }
hex-literal = "0.2.1"
jsonrpc-core = "14.0.3"
log = "0.4.8"
rand = "0.7.2"
serde = { version = "1.0.103", features = [ "derive" ] }
structopt = "0.3.5"

# primitives
authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/paritytech/substrate.git" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate.git" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate.git" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git" }
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate.git" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git" }
sp-finality-tracker = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git" }

# client dependencies
authority-discovery = { package = "substrate-authority-discovery", git = "https://github.com/paritytech/substrate.git" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate.git" }
chain-spec = { package = "substrate-chain-spec", git = "https://github.com/paritytech/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git" }
client-api = { package = "substrate-client-api", git = "https://github.com/paritytech/substrate.git" }
client_db = { package = "substrate-client-db", git = "https://github.com/paritytech/substrate.git", default-features = false }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate.git" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate.git" }
offchain = { package = "substrate-offchain", git = "https://github.com/paritytech/substrate.git" }
substrate-basic-authorship = { git = "https://github.com/paritytech/substrate.git" }
substrate-rpc = { package = "substrate-rpc", git = "https://github.com/paritytech/substrate.git" }
substrate-service = { git = "https://github.com/paritytech/substrate.git", default-features = false }
substrate-telemetry = { package = "substrate-telemetry", git = "https://github.com/paritytech/substrate.git" }
transaction_pool = { package = "sc-transaction-pool", git = "https://github.com/paritytech/substrate.git" }

# frame dependencies
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git" }
contracts = { package = "pallet-contracts", git = "https://github.com/paritytech/substrate.git" }
im_online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate.git", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate.git" }
sr-authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/paritytech/substrate.git" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git" }

# node-specific dependencies
dothereum-executor = { path = "../executor" }
dothereum-primitives = { path = "../primitives" }
dothereum-rpc = { path = "../rpc" }
dothereum-runtime = { path = "../runtime" }

# CLI-specific dependencies
ctrlc = { version = "3.1.3", features = ["termination"], optional = true }
substrate-cli = { optional = true, git = "https://github.com/paritytech/substrate.git" }
tokio = { version = "0.1.22", optional = true }
transaction-factory = { optional = true, git = "https://github.com/paritytech/substrate.git" }

# WASM-specific dependencies
clear_on_drop = { version = "0.2.3", features = ["no_cc"], optional = true }  # Imported just for the `no_cc` feature
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.1.2", optional = true }
js-sys = { version = "0.3.32", optional = true }
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common", optional = true }
libp2p = { version = "0.13.1", default-features = false, optional = true }
rand6 = { package = "rand", version = "0.7.2", features = ["wasm-bindgen"], optional = true }
wasm-bindgen = { version = "0.2.55", optional = true }
wasm-bindgen-futures = { version = "0.4.5", optional = true }

[dev-dependencies]
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate.git" }
consensus-common = { package = "substrate-consensus-common", git = "https://github.com/paritytech/substrate.git" }
futures = "0.3.1"
keystore = { package = "substrate-keystore", git = "https://github.com/paritytech/substrate.git" }
service-test = { package = "substrate-service-test", git = "https://github.com/paritytech/substrate.git" }
tempfile = "3.1.0"

[build-dependencies]
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate.git" }
structopt = "0.3.5"
substrate-cli = { package = "substrate-cli", git = "https://github.com/paritytech/substrate.git" }
vergen = "3.0.4"

[features]
default = ["cli"]
browser = [
  "clear_on_drop",
  "console_error_panic_hook",
  "console_log",
  "js-sys",
  "kvdb-memorydb",
  "libp2p",
  "rand/wasm-bindgen",
  "rand6",
  "wasm-bindgen",
  "wasm-bindgen-futures",
]
cli = [
  "ctrlc",
  "dothereum-executor/wasmi-errno",
  "substrate-cli",
  "substrate-service/rocksdb",
  "tokio",
  "transaction-factory",
]
wasmtime = [
  "cli",
  "dothereum-executor/wasmtime",
  "substrate-cli/wasmtime",
  "substrate-service/wasmtime",
]
