[package]
name = "dothereum-executor"
version = "0.3.0"
authors = ["Parity Technologies"]
description = "Dothereum node implementation in Rust."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.1.0" }
dothereum-primitives = { path = "../primitives" }
dothereum-runtime = { path = "../runtime" }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git' }
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git' }
state_machine = { package = "substrate-state-machine", git = 'https://github.com/paritytech/substrate.git' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git' }
trie = { package = "substrate-trie", git = 'https://github.com/paritytech/substrate.git' }

[dev-dependencies]
balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git' }
contracts = { package = "pallet-contracts", git = 'https://github.com/paritytech/substrate.git' }
dothereum-testing = { path = "../testing" }
indices = { package = "pallet-indices", git = 'https://github.com/paritytech/substrate.git' }
runtime_support = { package = "frame-support", git = 'https://github.com/paritytech/substrate.git' }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git' }
system = { package = "frame-system", git = 'https://github.com/paritytech/substrate.git' }
test-client = { package = "substrate-test-client", git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git' }
transaction-payment = { package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git' }
treasury = { package = "pallet-treasury", git = 'https://github.com/paritytech/substrate.git' }
wabt = "0.9.2"

[features]
stress-test = []
wasmi-errno = [
  "substrate-executor/wasmi-errno",
]
wasmtime = [
  "substrate-executor/wasmtime",
]
