[package]
name = "dothereum-primitives"
version = "0.3.0"
authors = ["Parity Technologies"]
edition = "2018"

[dependencies]
primitives = { package = "sp-core", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
  "primitives/std",
  "sp-runtime/std",
]
