[package]
name = "dothereum-rpc"
version = "0.3.0"
authors = ["Parity Technologies"]
edition = "2018"

[dependencies]
client = { package = "sc-client", git = 'https://github.com/paritytech/substrate.git' }
dothereum-primitives = { path = "../primitives" }
dothereum-runtime = { path = "../runtime" }
jsonrpc-core = "14.0.5"
pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate.git' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git' }
txpool-api = { package = "sp-transaction-pool", git = 'https://github.com/paritytech/substrate.git' }
