[package]
name = "dothereum-testing"
version = "0.3.0"
authors = ["Parity Technologies"]
description = "Test utilities for Dothereum node."
edition = "2018"

[dependencies]
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate.git", features = [ "test-helpers" ] }
balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git' }
client = { package = "substrate-client", git = 'https://github.com/paritytech/substrate.git' }
codec = { package = "parity-scale-codec", version = "1.1.0" }
contracts = { package = "pallet-contracts", git = 'https://github.com/paritytech/substrate.git' }
dothereum-executor = { path = "../executor" }
dothereum-primitives = { path = "../primitives" }
dothereum-runtime = { path = "../runtime" }
grandpa = { package = "pallet-grandpa", git = 'https://github.com/paritytech/substrate.git' }
indices = { package = "pallet-indices", git = 'https://github.com/paritytech/substrate.git' }
keyring = { package = "substrate-keyring", git = 'https://github.com/paritytech/substrate.git' }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git' }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git' }
runtime_support = { package = "frame-support", git = 'https://github.com/paritytech/substrate.git' }
session = { package = "pallet-session", git = 'https://github.com/paritytech/substrate.git' }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git' }
staking = { package = "pallet-staking", git = 'https://github.com/paritytech/substrate.git' }
substrate-executor = { git = 'https://github.com/paritytech/substrate.git' }
system = { package = "frame-system", git = 'https://github.com/paritytech/substrate.git' }
test-client = { package = "substrate-test-client", git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git' }
transaction-payment = { package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git' }
treasury = { package = "pallet-treasury", git = 'https://github.com/paritytech/substrate.git' }
wabt = "0.9.2"
